--- a/www/index.html
+++ b/www/index.html
@@ -150,7 +150,9 @@
 
 
     // 変数宣言
-
+    var active = false;
+    var startTime = 0;
+    var period = 0;
 
     
     // ボタンの初期設定
@@ -174,7 +176,6 @@
         var audio = new Audio();
         audio.src = "pin.wav";
         audio.play();
-
     }
     
     // ButtonAがクリックされた時の処理
