--- a/www/index.html
+++ b/www/index.html
@@ -188,6 +188,9 @@
     function btnBClick(e){
         active = false;
         
+        period = 60;
+        $("#time").html("経過時間: 0");
+        $("#remain").html("残り時間: " + period);
     }
 
     // ButtonCがクリックされた時の処理
@@ -228,7 +231,7 @@
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
     <button id="btnA">Start</button>  
-    <button id="btnB">Stop</button>  
+    <button id="btnB">1分</button>  
     <button id="btnC">Set</button>  
     <input type="number" id="minute" value=0 >
     <input type="number" id="second" value=15 >
